# IoTJ-EdgeQunatum

./: .gitignore  README.md  debug_benchmark.py  debug_output.txt  gemini.md  qaoa_iot.py  qaoa_log.txt  requirements.txt  resume_benchmark.sh  run_cuquantum_35q.sh  run_cuquantum_36q.sh  run_cuquantum_37q.sh  run_cuquantum_bench.sh  test_cuquantum_benchmark.py  test_eq.py  test_native_fixed.py  test_reset.py  vqe_iot.py  vqe_log.txt
code/: CMakeLists.txt  Makefile  benchmark_28q_onwards.py  benchmark_optimized.py  cirq_verify.py  comprehensive_benchmark.py  comprehensive_results.json.bak  compressed_sim.py  cuquantum_sim.py  debug_investigation.py  extreme_scaling_test.py  grand_benchmark.py  grand_benchmark_full.py  multi_circuit_bench.py  parse_benchmark.py  plot_aurora_figures.py  plot_aurora_style.py  plot_comparison.py  plot_compression_mechanism.py  plot_motivation.py  plot_real_data.py  plot_resources.py  plot_results.py  plot_summary.py  run_28q_schemes.py  run_remaining.py  scaleqsim_bench.py  test_cuquantum_simple.py  test_kernel.cpp  test_native.py  test_pauli.cpp  test_py_correctness.py  test_verification_28q.cpp  three_tier_memory_sim.py  tiered_memory_sim.py  tiered_simulator.py  unified_benchmark.py  validated_benchmark.py
code/data/: benchmark_results_final.json  benchmark_results_parsed.json  v1_v2_comparison.json  v3_benchmark_20260115_234118.json  v3_benchmark_20260115_234200.json  v3_benchmark_20260115_234533.json  v3_benchmark_20260115_234847.json  v3_benchmark_20260115_235025.json  v3_benchmark_20260115_235401.json  v3_benchmark_20260115_235945.json  (+2 more)
(+44 files in other folders)
